Bug 502836 - Fix 'script stack space quota is exhausted' error. r=igor a=blocking-betaN+